<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.18</version>
        <relativePath/>
    </parent>

    <groupId>com.collection</groupId>
    <artifactId>collection-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>collection-parent</name>
    <description>MOCASA 智能催收升级 Phase 1 — 多模块骨架（接口先行 + Mock SPI 全链路跑通）</description>

    <modules>
        <module>collection-common</module>
        <module>collection-service</module>
        <module>collection-engine</module>
        <module>collection-channel</module>
        <module>collection-ingestion</module>
        <module>collection-admin</module>
    </modules>

    <properties>
        <java.version>1.8</java.version>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-cloud.version>2021.0.9</spring-cloud.version>
        <spring-cloud-alibaba.version>2021.0.6.2</spring-cloud-alibaba.version>
        <!-- 3.x 是兼容 Spring Boot 2.7 / Java 8 的最后一条线（4.x 起需 Boot 3 / Java 17） -->
        <spring-cloud-gcp.version>3.4.0</spring-cloud-gcp.version>
        <mybatis.starter.version>2.3.2</mybatis.starter.version>
        <fastjson.version>1.2.83</fastjson.version>
        <lombok.version>1.18.42</lombok.version>
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <mysql.version>8.0.33</mysql.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- GCP PubSub（B1 数据接入）。BOM 统一管理 google-cloud-pubsub 等版本，Java 8 安全。 -->
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>spring-cloud-gcp-dependencies</artifactId>
                <version>${spring-cloud-gcp.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- 内部模块 -->
            <dependency>
                <groupId>com.collection</groupId>
                <artifactId>collection-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.collection</groupId>
                <artifactId>collection-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.collection</groupId>
                <artifactId>collection-engine</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.collection</groupId>
                <artifactId>collection-channel</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.collection</groupId>
                <artifactId>collection-ingestion</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- 第三方 -->
            <dependency>
                <groupId>org.mybatis.spring.boot</groupId>
                <artifactId>mybatis-spring-boot-starter</artifactId>
                <version>${mybatis.starter.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                        <includes>
                            <include>**/*Test.java</include>
                            <include>**/*IT.java</include>
                        </includes>
                        <excludedGroups>integration</excludedGroups>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- 代码格式化：Spotless + google-java-format(AOSP=4空格)。
                 2.30.0 是最后支持 JRE 8 运行的版本；GJF 1.7 是最后支持 Java 8 的版本。
                 ratchetFrom 只处理相对 origin/main 改动过的文件 → 增量采用，避免一次性重排全仓。 -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.30.0</version>
                <configuration>
                    <ratchetFrom>origin/main</ratchetFrom>
                    <java>
                        <includes>
                            <include>src/main/java/**/*.java</include>
                            <include>src/test/java/**/*.java</include>
                        </includes>
                        <googleJavaFormat>
                            <version>1.7</version>
                            <style>AOSP</style>
                        </googleJavaFormat>
                        <removeUnusedImports/>
                        <importOrder/>
                        <trimTrailingWhitespace/>
                        <endWithNewline/>
                    </java>
                </configuration>
                <executions>
                    <!-- check 默认绑定 verify 阶段：构建/CI 时校验，不达标即失败 -->
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- 任何人首次 mvn 即把 git core.hooksPath 指向版本化的 .githooks/，钩子对全员自动生效 -->
            <plugin>
                <groupId>com.rudikershaw.gitbuildhook</groupId>
                <artifactId>git-build-hook-maven-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <gitConfig>
                        <core.hooksPath>.githooks</core.hooksPath>
                    </gitConfig>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>configure</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>integration-tests</id>
            <activation>
                <property>
                    <name>groups</name>
                    <value>integration</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration combine.self="override">
                            <useModulePath>false</useModulePath>
                            <includes>
                                <include>**/*Test.java</include>
                                <include>**/*IT.java</include>
                            </includes>
                            <groups>integration</groups>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
